# sitai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  app.py  database.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  SOCIAL_PREVIEW.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml
docs/: usage.md
sitai/: database.py
tests/: __init__.py  conftest.py  test_basic.py  test_database.py  test_models.py
